fixing exception handling and other minor issues.